# plutus_backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
alembic/: env.py
alembic/versions/: 54d58ab11c6d_init_schema.py  b1c2d3e4f5a6_school_fields.py
app/: config.py  database.py  deps.py  main.py  models.py  schemas.py  security.py  seed.py
app/routers/: auth.py  categories.py  dashboard.py  fee_structures.py  imports.py  installments.py  student_fees.py  students.py
app/services/: ai_import.py  fees.py
