[project]
name = "fee-management-backend"
version = "0.1.0"
description = "Plutus - School Fee Management System - FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    "pyjwt>=2.10.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.17",
    "authlib>=1.3.2",
    "httpx>=0.28.0",
    "openpyxl>=3.1.5",
]

[tool.uv]
package = false
